# gembench

./: LICENSE  LICENSE.md  README.md
datasets/: download_datasets.py
datasets/cassandra/: .gitignore
datasets/cassandra/solutions/MDPSOLVE/: 1d.noisy.txt  1d.txt  4x3.95.txt  4x4.95.txt  4x5x2.95.txt  README.txt  aloha.10.txt  aloha.30.txt  baseball.txt  bridge-repair.txt  cheese.95.txt  cheng.D3-1.txt  cheng.D3-2.txt  cheng.D3-3.txt  cheng.D3-4.txt  cheng.D3-5.txt  cheng.D4-1.txt  cheng.D4-2.txt  cheng.D4-3.txt  cheng.D4-4.txt  cheng.D4-5.txt  cheng.D5-1.txt  cit.txt  concert.txt  ejs-ft-counter.txt  ejs3.txt  fourth.txt  hallway.txt  hallway2.txt  iff.txt  machine.txt  marking.txt  marking2.txt  mcc-example1.txt  milos-aaai97.txt  mini-hall2.txt  mit.txt  network.txt  paint.95.txt  parr95.95.txt  (+14 more)
datasets/cassandra/solutions/pomdp-solve/: 1d-3252.alpha  (+34 more)
datasets/dscconfig/: README.txt  cprupdate
doc/: version.txt
doc/dscconfig/: cprupdate
dscconfig/: cprupdate
dxnotes/: README.txt  uxrelease
scripts/: solve_cassandra_mdps.sh
scripts/dscconfig/: cprupdate
scripts/matlab/: create_pomdp.m  mdpsolvefromfile.m  readPOMDP.m  solvemanypomdp.m
scripts/matlab/random/: generate_mdp.m  generate_mdp_test.m
src/: CMakeLists.txt  main.cpp
src/dscconfig/: cprupdate
src/parsers/cassandra/: CMakeLists.txt  Const.h  decision-tree.c  decision-tree.h  mdpCassandra.c  pomdp_spec.yy.cc
src/solvers/: CMakeLists.txt  cuda_init.cu  cuda_init.h  solver_spvi.cu  solver_spvi.h  solver_vi.cpp  solver_vi.h  utils.cpp  utils.h
src/solvers/dscconfig/: cprupdate
